--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,114 @@
+:root {
+    --color-background: #fff;
+    --color-background-primary: #f6f6f6;
+    --color-background-light: #f1f1f1;
+    --color-text-secondary: #ffa300;
+    --color-text-primary: #333;
+    --color-text-light: #f1f1f1;
+    --font-title: poppins;
+    --font-text: noto-sans;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-title);
+}
+
 body {
-    background-color: #f6f6f6;
+    background-color: var(--color-background);
+    color: var(--color-text-primary);
+    font-family: var(--font-text);
+    font-size: 1rem;
+}
+
+/*
+ * Content
+*/
+.main-content {    
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.main-content__body {
+    display: flex;
+    width: 70vw;
+}
+
+/*
+ * Footer
+*/
+.footer {
+    background-color: var(--color-background-light);
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.footer__content {
+    display: flex;
+    min-height: 80px;
+    padding: 24px 0;
+    width: 70vw;
+}
+
+/*
+ * Top NavBar
+*/
+nav {
+    align-items: center;
+    background-color: var(--color-text-primary);
+    color: var(--color-text-light);
+    display: flex;
+    font-family: var(--font-title);
+    height: 70px;
+    justify-content: center;
+    text-transform: uppercase;
+    width: 100%;
+}
+
+nav a:visited {
+    color: var(--color-text-light);
+}
+
+nav a:hover {
+    color: var(--color-text-secondary);
+}
+
+.nav-bar__content {
+    display: flex;
+    justify-content: space-between;
+    width: 70vw;
+}
+
+.nav-bar__items {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.nav-bar__logo {
+    display: flex;
+    align-self: center;
+}
+
+.nav-bar__items a {
+    padding: 20px;
+    text-decoration: none;
+}
+
+@font-face {
+    font-family: poppins;
+    src: url('../fonts/Poppins-Regular.ttf');
+}
+
+
+@font-face {
+    font-family: noto-sans;
+    src: url('../fonts/NotoSansMono-Regular.ttf');
 }
