--- a/templates/layouts/partials/menu.html
+++ b/templates/layouts/partials/menu.html
@@ -1,6 +1,6 @@
 <nav class="nav-bar">
     <div class="nav-bar__content">
-        <a class="nav-bar__logo">Logo</a>
+        <span class="nav-bar__logo">CM</span>
         <div class="nav-bar__items">
             {% for item in menuItems %}
                 <a href="{% url item.path %}">{{ item.name }}</a>
