--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,11 @@
 :root {
     --color-background: #fff;
     --color-background-primary: #f6f6f6;
-    --color-background-light: #f1f1f1;
+    --color-line: #e9e9e9;
     --color-text-secondary: #ffa300;
-    --color-text-primary: #333;
-    --color-text-light: #f1f1f1;
+    --color-text-primary-dark: #333;
+    --color-text-primary: #777777;
+    --color-text-light: #e1e1e1;
     --font-title: poppins;
     --font-text: noto-sans;
 }
@@ -19,9 +20,14 @@ h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-title);
 }
 
+span {
+    color: var(--color-text-primary);
+    font-size: .85rem;
+}
+
 body {
     background-color: var(--color-background);
-    color: var(--color-text-primary);
+    color: var(--color-text-primary-dark);
     font-family: var(--font-text);
     font-size: 1rem;
 }
@@ -36,16 +42,12 @@ body {
     width: 100%;
 }
 
-.main-content__body {
-    display: flex;
-    width: 70vw;
-}
-
 /*
  * Footer
 */
 .footer {
-    background-color: var(--color-background-light);
+    background-color: var(--color-line);
+    border-top: 2px solid var(--color-text-light);
     display: flex;
     justify-content: center;
     width: 100%;
@@ -54,8 +56,8 @@ body {
 .footer__content {
     display: flex;
     min-height: 80px;
-    padding: 24px 0;
-    width: 70vw;
+    padding: 24px ;
+    width: 65vw;
 }
 
 /*
@@ -63,7 +65,7 @@ body {
 */
 nav {
     align-items: center;
-    background-color: var(--color-text-primary);
+    background-color: var(--color-text-primary-dark);
     color: var(--color-text-light);
     display: flex;
     font-family: var(--font-title);
@@ -84,7 +86,7 @@ nav a:hover {
 .nav-bar__content {
     display: flex;
     justify-content: space-between;
-    width: 70vw;
+    width: 65vw;
 }
 
 .nav-bar__items {
@@ -93,12 +95,13 @@ nav a:hover {
 }
 
 .nav-bar__logo {
-    display: flex;
     align-self: center;
+    display: flex;
+    padding: 24px;
 }
 
 .nav-bar__items a {
-    padding: 20px;
+    padding: 24px;
     text-decoration: none;
 }
 
